Add Unit Converter and Chat Room sections

--- a/main_index.html
+++ b/main_index.html
@@ -23,14 +23,23 @@
                 <a href="minesweeper/index.html" class="btn">Play Game</a>
             </div>
 
-            <div class="project-card">
-                <div class="project-icon">🔄</div>
-                <h2>Unit Converter</h2>
-                <p>Convert between different units of measurement</p>
-                <a href="unit_converter/index.html" class="btn">Open Converter</a>
-            </div>
-        </main>
+        <div class="project-card">
+          <div class="project-icon">🔄</div>
+          <h2>Unit Converter</h2>
+          <p>Convert between different units of measurement</p>
+          <a href="unit_converter/index.html" class="btn">Open Converter</a>
+        </div>
+
+        <div class="project-card">
+          <div class="project-icon">💬</div>
+          <h2>Chat Room</h2>
+          <p>A small space to chat with your friends</p>
+          <a href="chat/index.html" class="btn">Open Chat</a>
+        </div>
+      </main>
     </div>
+
+    
 
     <script src="main_index.js"></script>
 </body>
