adding a currency rate calc to the convertor with api

--- a/unit_converter/index.html
+++ b/unit_converter/index.html
@@ -22,6 +22,7 @@
                 <button class="category-btn" data-category="temperature">Temperature</button>
                 <button class="category-btn" data-category="volume">Volume</button>
                 <button class="category-btn" data-category="time">Time</button>
+                <button class="category-btn" data-category="currency">Currency</button>
             </div>
 
             <div class="converter-box">
