--- a/main_index.html
+++ b/main_index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects Menu</title>
-    <link rel="stylesheet" href="main_index.css">
-</head>
+    <link rel="stylesheet" href="main_index.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-            <h1>Welcome to Our Projects</h1>
-            <p class="subtitle">Select a project to explore</p>
-        </header>
+      <header>
+        <h1>Welcome to Our Projects</h1>
+        <p class="subtitle">Select a project to explore</p>
+      </header>
 
-        <main class="projects-grid">
-            <div class="project-card">
-                <div class="project-icon">💣</div>
-                <h2>Minesweeper</h2>
-                <p>Classic minesweeper game with customizable difficulty levels</p>
-                <a href="minesweeper/index.html" class="btn">Play Game</a>
-            </div>
+      <main class="projects-grid">
+        <div class="project-card">
+          <div class="project-icon">
+            <img
+              src="https://ik.imagekit.io/ocodhookk/Mesa%20de%20trabajo%201bomba.png"
+              class="project-icon-img"
+              alt="bomb"
+            />
+          </div>
+          <h2>Minesweeper</h2>
+          <p>Classic minesweeper game with customizable difficulty levels</p>
+          <a href="minesweeper/index.html" class="btn">Play Game</a>
+        </div>
 
         <div class="project-card">
-          <div class="project-icon">🔄</div>
+          <div class="project-icon">
+            <img
+              src="https://ik.imagekit.io/ocodhookk/Mesa%20de%20trabajo%201flechas.png"
+              class="project-icon-img"
+              alt="unit_converter"
+            />
+          </div>
           <h2>Unit Converter</h2>
           <p>Convert between different units of measurement</p>
           <a href="unit_converter/index.html" class="btn">Open Converter</a>
         </div>
 
         <div class="project-card">
-          <div class="project-icon">💬</div>
+          <div class="project-icon">
+            <img
+              src="https://ik.imagekit.io/ocodhookk/Mesa%20de%20trabajo%201chat.png"
+              class="project-icon-img"
+              alt="chat"
+            />
+          </div>
           <h2>Chat Room</h2>
           <p>A small space to chat with your friends</p>
           <a href="chat/index.html" class="btn">Open Chat</a>
@@ -39,9 +56,6 @@
       </main>
     </div>
 
-    
-
     <script src="main_index.js"></script>
-</body>
-
+  </body>
 </html>
